cmake_minimum_required(VERSION 2.8.4)
project(OpenYuma_master)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

include_directories("netconf/src/ncx" "netconf/src/platform")

set(SOURCE_FILES
    libtecla/normal_obj/keytab.h
    libtecla/chrqueue.c
    libtecla/chrqueue.h
    libtecla/cplfile.c
    libtecla/cplfile.h
    libtecla/cplmatch.c
    libtecla/cplmatch.h
    libtecla/demo.c
    libtecla/demo2.c
    libtecla/demo3.c
    libtecla/direader.c
    libtecla/direader.h
    libtecla/enhance.c
    libtecla/errmsg.c
    libtecla/errmsg.h
    libtecla/expand.c
    libtecla/expand.h
    libtecla/freelist.c
    libtecla/freelist.h
    libtecla/getline.c
    libtecla/getline.h
    libtecla/hash.c
    libtecla/hash.h
    libtecla/history.c
    libtecla/history.h
    libtecla/homedir.c
    libtecla/homedir.h
    libtecla/ioutil.c
    libtecla/ioutil.h
    libtecla/keytab.c
    libtecla/keytab.h
    libtecla/libtecla.h
    libtecla/pathutil.c
    libtecla/pathutil.h
    libtecla/pcache.c
    libtecla/stringrp.c
    libtecla/stringrp.h
    libtecla/strngmem.c
    libtecla/strngmem.h
    libtecla/version.c
    libtest/src/test.c
    libtest/src/test.h
    libtoaster/src/toaster.c
    libtoaster/src/toaster.h
    netconf/src/agt/agt.c
    netconf/src/agt/agt.h
    netconf/src/agt/agt_acm.c
    netconf/src/agt/agt_acm.h
    netconf/src/agt/agt_cap.c
    netconf/src/agt/agt_cap.h
    netconf/src/agt/agt_cb.c
    netconf/src/agt/agt_cb.h
    netconf/src/agt/agt_cfg.c
    netconf/src/agt/agt_cfg.h
    netconf/src/agt/agt_cli.c
    netconf/src/agt/agt_cli.h
    netconf/src/agt/agt_commit_complete.c
    netconf/src/agt/agt_commit_complete.h
    netconf/src/agt/agt_connect.c
    netconf/src/agt/agt_connect.h
    netconf/src/agt/agt_hello.c
    netconf/src/agt/agt_hello.h
    netconf/src/agt/agt_if.c
    netconf/src/agt/agt_if.h
    netconf/src/agt/agt_ncx.c
    netconf/src/agt/agt_ncx.h
    netconf/src/agt/agt_ncxserver.c
    netconf/src/agt/agt_ncxserver.h
    netconf/src/agt/agt_not.c
    netconf/src/agt/agt_not.h
    netconf/src/agt/agt_plock.c
    netconf/src/agt/agt_plock.h
    netconf/src/agt/agt_proc.c
    netconf/src/agt/agt_proc.h
    netconf/src/agt/agt_rpc.c
    netconf/src/agt/agt_rpc.h
    netconf/src/agt/agt_rpcerr.c
    netconf/src/agt/agt_rpcerr.h
    netconf/src/agt/agt_ses.c
    netconf/src/agt/agt_ses.h
    netconf/src/agt/agt_signal.c
    netconf/src/agt/agt_signal.h
    netconf/src/agt/agt_state.c
    netconf/src/agt/agt_state.h
    netconf/src/agt/agt_sys.c
    netconf/src/agt/agt_sys.h
    netconf/src/agt/agt_time_filter.c
    netconf/src/agt/agt_time_filter.h
    netconf/src/agt/agt_timer.c
    netconf/src/agt/agt_timer.h
    netconf/src/agt/agt_top.c
    netconf/src/agt/agt_top.h
    netconf/src/agt/agt_tree.c
    netconf/src/agt/agt_tree.h
    netconf/src/agt/agt_util.c
    netconf/src/agt/agt_util.h
    netconf/src/agt/agt_val.c
    netconf/src/agt/agt_val.h
    netconf/src/agt/agt_val_parse.c
    netconf/src/agt/agt_val_parse.h
    netconf/src/agt/agt_xml.c
    netconf/src/agt/agt_xml.h
    netconf/src/agt/agt_xpath.c
    netconf/src/agt/agt_xpath.h
    netconf/src/agt/agt_yuma_arp.c
    netconf/src/agt/agt_yuma_arp.h
    netconf/src/mgr/mgr.c
    netconf/src/mgr/mgr.h
    netconf/src/mgr/mgr_cap.c
    netconf/src/mgr/mgr_cap.h
    netconf/src/mgr/mgr_hello.c
    netconf/src/mgr/mgr_hello.h
    netconf/src/mgr/mgr_io.c
    netconf/src/mgr/mgr_io.h
    netconf/src/mgr/mgr_load.c
    netconf/src/mgr/mgr_load.h
    netconf/src/mgr/mgr_not.c
    netconf/src/mgr/mgr_not.h
    netconf/src/mgr/mgr_rpc.c
    netconf/src/mgr/mgr_rpc.h
    netconf/src/mgr/mgr_ses.c
    netconf/src/mgr/mgr_ses.h
    netconf/src/mgr/mgr_signal.c
    netconf/src/mgr/mgr_signal.h
    netconf/src/mgr/mgr_top.c
    netconf/src/mgr/mgr_top.h
    netconf/src/mgr/mgr_val_parse.c
    netconf/src/mgr/mgr_val_parse.h
    netconf/src/mgr/mgr_xml.c
    netconf/src/mgr/mgr_xml.h
    netconf/src/ncx/b64.c
    netconf/src/ncx/b64.h
    netconf/src/ncx/blob.c
    netconf/src/ncx/blob.h
    netconf/src/ncx/bobhash.c
    netconf/src/ncx/bobhash.h
    netconf/src/ncx/cap.c
    netconf/src/ncx/cap.h
    netconf/src/ncx/cfg.c
    netconf/src/ncx/cfg.h
    netconf/src/ncx/cli.c
    netconf/src/ncx/cli.h
    netconf/src/ncx/conf.c
    netconf/src/ncx/conf.h
    netconf/src/ncx/def_reg.c
    netconf/src/ncx/def_reg.h
    netconf/src/ncx/dlq.c
    netconf/src/ncx/dlq.h
    netconf/src/ncx/ext.c
    netconf/src/ncx/ext.h
    netconf/src/ncx/getcb.h
    netconf/src/ncx/grp.c
    netconf/src/ncx/grp.h
    netconf/src/ncx/help.c
    netconf/src/ncx/help.h
    netconf/src/ncx/json_wr.c
    netconf/src/ncx/json_wr.h
    netconf/src/ncx/libncx.h
    netconf/src/ncx/log.c
    netconf/src/ncx/log.h
    netconf/src/ncx/ncx.c
    netconf/src/ncx/ncx.h
    netconf/src/ncx/ncx_appinfo.c
    netconf/src/ncx/ncx_appinfo.h
    netconf/src/ncx/ncx_feature.c
    netconf/src/ncx/ncx_feature.h
    netconf/src/ncx/ncx_list.c
    netconf/src/ncx/ncx_list.h
    netconf/src/ncx/ncx_num.c
    netconf/src/ncx/ncx_num.h
    netconf/src/ncx/ncx_str.c
    netconf/src/ncx/ncx_str.h
    netconf/src/ncx/ncxconst.h
    netconf/src/ncx/ncxmod.c
    netconf/src/ncx/ncxmod.h
    netconf/src/ncx/ncxtypes.h
    netconf/src/ncx/obj.c
    netconf/src/ncx/obj.h
    netconf/src/ncx/obj_help.c
    netconf/src/ncx/obj_help.h
    netconf/src/ncx/op.c
    netconf/src/ncx/op.h
    netconf/src/ncx/plock.c
    netconf/src/ncx/plock.h
    netconf/src/ncx/plock_cb.c
    netconf/src/ncx/plock_cb.h
    netconf/src/ncx/rpc.c
    netconf/src/ncx/rpc.h
    netconf/src/ncx/rpc_err.c
    netconf/src/ncx/rpc_err.h
    netconf/src/ncx/runstack.c
    netconf/src/ncx/runstack.h
    netconf/src/ncx/send_buff.c
    netconf/src/ncx/send_buff.h
    netconf/src/ncx/ses.c
    netconf/src/ncx/ses.h
    netconf/src/ncx/ses_msg.c
    netconf/src/ncx/ses_msg.h
    netconf/src/ncx/status.c
    netconf/src/ncx/status.h
    netconf/src/ncx/tk.c
    netconf/src/ncx/tk.h
    netconf/src/ncx/top.c
    netconf/src/ncx/top.h
    netconf/src/ncx/tstamp.c
    netconf/src/ncx/tstamp.h
    netconf/src/ncx/typ.c
    netconf/src/ncx/typ.h
    netconf/src/ncx/val.c
    netconf/src/ncx/val.h
    netconf/src/ncx/val_util.c
    netconf/src/ncx/val_util.h
    netconf/src/ncx/var.c
    netconf/src/ncx/var.h
    netconf/src/ncx/version.h
    netconf/src/ncx/xml_msg.c
    netconf/src/ncx/xml_msg.h
    netconf/src/ncx/xml_util.c
    netconf/src/ncx/xml_util.h
    netconf/src/ncx/xml_val.c
    netconf/src/ncx/xml_val.h
    netconf/src/ncx/xml_wr.c
    netconf/src/ncx/xml_wr.h
    netconf/src/ncx/xmlns.c
    netconf/src/ncx/xmlns.h
    netconf/src/ncx/xpath.c
    netconf/src/ncx/xpath.h
    netconf/src/ncx/xpath1.c
    netconf/src/ncx/xpath1.h
    netconf/src/ncx/xpath_wr.c
    netconf/src/ncx/xpath_wr.h
    netconf/src/ncx/xpath_yang.c
    netconf/src/ncx/xpath_yang.h
    netconf/src/ncx/yang.c
    netconf/src/ncx/yang.h
    netconf/src/ncx/yang_ext.c
    netconf/src/ncx/yang_ext.h
    netconf/src/ncx/yang_grp.c
    netconf/src/ncx/yang_grp.h
    netconf/src/ncx/yang_obj.c
    netconf/src/ncx/yang_obj.h
    netconf/src/ncx/yang_parse.c
    netconf/src/ncx/yang_parse.h
    netconf/src/ncx/yang_typ.c
    netconf/src/ncx/yang_typ.h
    netconf/src/ncx/yangconst.h
    netconf/src/ncx/yin.c
    netconf/src/ncx/yin.h
    netconf/src/ncx/yinyang.c
    netconf/src/ncx/yinyang.h
    netconf/src/netconfd/netconfd.c
    netconf/src/platform/curversion.h
    netconf/src/platform/procdefs.h
    netconf/src/subsys/netconf-subsystem.c
    netconf/src/yangcli/yangcli.c
    netconf/src/yangcli/yangcli.h
    netconf/src/yangcli/yangcli_alias.c
    netconf/src/yangcli/yangcli_alias.h
    netconf/src/yangcli/yangcli_autoload.c
    netconf/src/yangcli/yangcli_autoload.h
    netconf/src/yangcli/yangcli_autolock.c
    netconf/src/yangcli/yangcli_autolock.h
    netconf/src/yangcli/yangcli_cmd.c
    netconf/src/yangcli/yangcli_cmd.h
    netconf/src/yangcli/yangcli_cond.c
    netconf/src/yangcli/yangcli_cond.h
    netconf/src/yangcli/yangcli_eval.c
    netconf/src/yangcli/yangcli_eval.h
    netconf/src/yangcli/yangcli_list.c
    netconf/src/yangcli/yangcli_list.h
    netconf/src/yangcli/yangcli_save.c
    netconf/src/yangcli/yangcli_save.h
    netconf/src/yangcli/yangcli_show.c
    netconf/src/yangcli/yangcli_show.h
    netconf/src/yangcli/yangcli_tab.c
    netconf/src/yangcli/yangcli_tab.h
    netconf/src/yangcli/yangcli_timer.c
    netconf/src/yangcli/yangcli_timer.h
    netconf/src/yangcli/yangcli_uservars.c
    netconf/src/yangcli/yangcli_uservars.h
    netconf/src/yangcli/yangcli_util.c
    netconf/src/yangcli/yangcli_util.h
    netconf/src/yangdiff/yangdiff.c
    netconf/src/yangdiff/yangdiff.h
    netconf/src/yangdiff/yangdiff_grp.c
    netconf/src/yangdiff/yangdiff_grp.h
    netconf/src/yangdiff/yangdiff_obj.c
    netconf/src/yangdiff/yangdiff_obj.h
    netconf/src/yangdiff/yangdiff_typ.c
    netconf/src/yangdiff/yangdiff_typ.h
    netconf/src/yangdiff/yangdiff_util.c
    netconf/src/yangdiff/yangdiff_util.h
    netconf/src/yangdump/yangdump.c
    netconf/src/ydump/c.c
    netconf/src/ydump/c.h
    netconf/src/ydump/c_util.c
    netconf/src/ydump/c_util.h
    netconf/src/ydump/cyang.c
    netconf/src/ydump/cyang.h
    netconf/src/ydump/h.c
    netconf/src/ydump/h.h
    netconf/src/ydump/html.c
    netconf/src/ydump/html.h
    netconf/src/ydump/py_util.c
    netconf/src/ydump/py_util.h
    netconf/src/ydump/sql.c
    netconf/src/ydump/sql.h
    netconf/src/ydump/tg2.c
    netconf/src/ydump/tg2.h
    netconf/src/ydump/xsd.c
    netconf/src/ydump/xsd.h
    netconf/src/ydump/xsd_typ.c
    netconf/src/ydump/xsd_typ.h
    netconf/src/ydump/xsd_util.c
    netconf/src/ydump/xsd_util.h
    netconf/src/ydump/xsd_yang.c
    netconf/src/ydump/xsd_yang.h
    netconf/src/ydump/yangdump.h
    netconf/src/ydump/yangdump_util.c
    netconf/src/ydump/yangdump_util.h
    netconf/src/ydump/yangstats.c
    netconf/src/ydump/yangstats.h
    netconf/src/ydump/yangyin.c
    netconf/src/ydump/yangyin.h
    netconf/src/ydump/ydump.c
    netconf/src/ydump/ydump.h
    netconf/test/integ-tests/configure-yuma-integtest.h
    netconf/test/integ-tests/default-none-running.cpp
    netconf/test/integ-tests/define-yuma-integtest-global-fixture.h
    netconf/test/integ-tests/device-edit-candidate.cpp
    netconf/test/integ-tests/device-edit-running.cpp
    netconf/test/integ-tests/discard-changes.cpp
    netconf/test/integ-tests/lock-load-candidate.cpp
    netconf/test/integ-tests/lock-load-running.cpp
    netconf/test/integ-tests/simple-edit-candidate.cpp
    netconf/test/integ-tests/simple-edit-running.cpp
    netconf/test/integ-tests/simple-edit-startup-false.cpp
    netconf/test/integ-tests/simple-edit-startup-true.cpp
    netconf/test/integ-tests/simple-yang.cpp
    netconf/test/integ-tests/state-edit-candidate.cpp
    netconf/test/integ-tests/state-edit-running.cpp
    netconf/test/modules/build-sil/device_test/device_test.cpp
    netconf/test/modules/build-sil/device_test/device_test.h
    netconf/test/modules/build-sil/simple_list_test/simple_list_test.c
    netconf/test/modules/build-sil/simple_list_test/simple_list_test.cpp
    netconf/test/modules/build-sil/simple_list_test/simple_list_test.h
    netconf/test/modules/build-sil/simple_yang_test/simple_yang_test.c
    netconf/test/modules/build-sil/simple_yang_test/simple_yang_test.cpp
    netconf/test/modules/build-sil/simple_yang_test/simple_yang_test.h
    netconf/test/stubs/agt/agt_ncxserver.cpp
    netconf/test/stubs/ncx/send_buff.cpp
    netconf/test/subsys-test/ncx-init/ncx-init-test.cpp
    netconf/test/support/callbacks/abstract-cb-checker-factory.h
    netconf/test/support/callbacks/callback-checker.cpp
    netconf/test/support/callbacks/callback-checker.h
    netconf/test/support/callbacks/candidate-cb-checker.cpp
    netconf/test/support/callbacks/candidate-cb-checker.h
    netconf/test/support/callbacks/integ-cb-checker-factory.cpp
    netconf/test/support/callbacks/integ-cb-checker-factory.h
    netconf/test/support/callbacks/running-cb-checker.cpp
    netconf/test/support/callbacks/running-cb-checker.h
    netconf/test/support/callbacks/sil-callback-controller.cpp
    netconf/test/support/callbacks/sil-callback-controller.h
    netconf/test/support/callbacks/sil-callback-log.cpp
    netconf/test/support/callbacks/sil-callback-log.h
    netconf/test/support/callbacks/system-cb-checker-factory.cpp
    netconf/test/support/callbacks/system-cb-checker-factory.h
    netconf/test/support/callbacks/system-cb-checker.cpp
    netconf/test/support/callbacks/system-cb-checker.h
    netconf/test/support/checkers/checker-group.cpp
    netconf/test/support/checkers/checker-group.h
    netconf/test/support/checkers/log-entry-presence-checkers.cpp
    netconf/test/support/checkers/log-entry-presence-checkers.h
    netconf/test/support/checkers/string-presence-checkers.cpp
    netconf/test/support/checkers/string-presence-checkers.h
    netconf/test/support/checkers/xml-content-checker.h
    netconf/test/support/db-models/db-check-utils.h
    netconf/test/support/db-models/device-test-db-debug.cpp
    netconf/test/support/db-models/device-test-db-debug.h
    netconf/test/support/db-models/device-test-db.cpp
    netconf/test/support/db-models/device-test-db.h
    netconf/test/support/db-models/state-data-test-db.cpp
    netconf/test/support/db-models/state-data-test-db.h
    netconf/test/support/fixtures/abstract-fixture-helper-factory.h
    netconf/test/support/fixtures/abstract-fixture-helper.h
    netconf/test/support/fixtures/abstract-global-fixture.cpp
    netconf/test/support/fixtures/abstract-global-fixture.h
    netconf/test/support/fixtures/base-suite-fixture.cpp
    netconf/test/support/fixtures/base-suite-fixture.h
    netconf/test/support/fixtures/device-get-module-fixture.cpp
    netconf/test/support/fixtures/device-get-module-fixture.h
    netconf/test/support/fixtures/device-module-common-fixture.cpp
    netconf/test/support/fixtures/device-module-common-fixture.h
    netconf/test/support/fixtures/device-module-fixture.cpp
    netconf/test/support/fixtures/device-module-fixture.h
    netconf/test/support/fixtures/integ-fixture-helper-factory.cpp
    netconf/test/support/fixtures/integ-fixture-helper-factory.h
    netconf/test/support/fixtures/integ-fixture-helper.cpp
    netconf/test/support/fixtures/integ-fixture-helper.h
    netconf/test/support/fixtures/integ-test-fixture.h
    netconf/test/support/fixtures/query-suite-fixture.cpp
    netconf/test/support/fixtures/query-suite-fixture.h
    netconf/test/support/fixtures/simple-container-module-fixture.cpp
    netconf/test/support/fixtures/simple-container-module-fixture.h
    netconf/test/support/fixtures/simple-yang-fixture.cpp
    netconf/test/support/fixtures/simple-yang-fixture.h
    netconf/test/support/fixtures/spoofed-args.h
    netconf/test/support/fixtures/state-data-module-common-fixture.cpp
    netconf/test/support/fixtures/state-data-module-common-fixture.h
    netconf/test/support/fixtures/state-get-module-fixture.cpp
    netconf/test/support/fixtures/state-get-module-fixture.h
    netconf/test/support/fixtures/system-fixture-helper-factory.cpp
    netconf/test/support/fixtures/system-fixture-helper-factory.h
    netconf/test/support/fixtures/system-fixture-helper.cpp
    netconf/test/support/fixtures/system-fixture-helper.h
    netconf/test/support/fixtures/system-test-fixture.h
    netconf/test/support/fixtures/test-context.cpp
    netconf/test/support/fixtures/test-context.h
    netconf/test/support/misc-util/array-deleter.h
    netconf/test/support/misc-util/base64.cpp
    netconf/test/support/misc-util/base64.h
    netconf/test/support/misc-util/cpp-unit-op-formatter.cpp
    netconf/test/support/misc-util/cpp-unit-op-formatter.h
    netconf/test/support/misc-util/log-utils.cpp
    netconf/test/support/misc-util/log-utils.h
    netconf/test/support/misc-util/ptree-utils.cpp
    netconf/test/support/misc-util/ptree-utils.h
    netconf/test/support/msg-util/NCMessageBuilder.cpp
    netconf/test/support/msg-util/NCMessageBuilder.h
    netconf/test/support/msg-util/state-data-query-builder.cpp
    netconf/test/support/msg-util/state-data-query-builder.h
    netconf/test/support/msg-util/xpo-query-builder.cpp
    netconf/test/support/msg-util/xpo-query-builder.h
    netconf/test/support/nc-query-util/nc-base-query-test-engine.cpp
    netconf/test/support/nc-query-util/nc-base-query-test-engine.h
    netconf/test/support/nc-query-util/nc-default-operation-config.cpp
    netconf/test/support/nc-query-util/nc-default-operation-config.h
    netconf/test/support/nc-query-util/nc-query-test-engine.cpp
    netconf/test/support/nc-query-util/nc-query-test-engine.h
    netconf/test/support/nc-query-util/nc-query-utils.cpp
    netconf/test/support/nc-query-util/nc-query-utils.h
    netconf/test/support/nc-query-util/nc-strings.cpp
    netconf/test/support/nc-query-util/nc-strings.h
    netconf/test/support/nc-query-util/yuma-op-policies.cpp
    netconf/test/support/nc-query-util/yuma-op-policies.h
    netconf/test/support/nc-session/abstract-nc-session-factory.h
    netconf/test/support/nc-session/abstract-nc-session.cpp
    netconf/test/support/nc-session/abstract-nc-session.h
    netconf/test/support/nc-session/remote-nc-session-factory.cpp
    netconf/test/support/nc-session/remote-nc-session-factory.h
    netconf/test/support/nc-session/remote-nc-session.cpp
    netconf/test/support/nc-session/remote-nc-session.h
    netconf/test/support/nc-session/spoof-nc-session-factory.cpp
    netconf/test/support/nc-session/spoof-nc-session-factory.h
    netconf/test/support/nc-session/spoof-nc-session.cpp
    netconf/test/support/nc-session/spoof-nc-session.h
    netconf/test/support/nc-session/sys-test-nc-session-base.cpp
    netconf/test/support/nc-session/sys-test-nc-session-base.h
    netconf/test/sys-test/configure-yuma-systest.h
    netconf/test/sys-test/define-yuma-systest-global-fixture.h
    netconf/test/sys-test/device-edit-candidate.cpp
    netconf/test/sys-test/device-edit-running.cpp
    netconf/test/sys-test/lock-load-candidate.cpp
    netconf/test/sys-test/lock-load-running.cpp
    netconf/test/sys-test/shutdown.cpp
    netconf/test/sys-test/simple-edit-candidate.cpp
    netconf/test/sys-test/simple-edit-running.cpp
    netconf/test/test-suites/common/callback-failures-tests.cpp
    netconf/test/test-suites/common/db-lock-test-suite-candidate.cpp
    netconf/test/test-suites/common/db-lock-test-suite-common.cpp
    netconf/test/test-suites/common/db-lock-test-suite-running.cpp
    netconf/test/test-suites/common/default-none-tests.cpp
    netconf/test/test-suites/common/device-tests-create.cpp
    netconf/test/test-suites/common/device-tests-delete.cpp
    netconf/test/test-suites/common/device-tests-get.cpp
    netconf/test/test-suites/common/device-tests-merge.cpp
    netconf/test/test-suites/common/device-tests-misc.cpp
    netconf/test/test-suites/common/device-tests-replace.cpp
    netconf/test/test-suites/common/discard-changes-tests.cpp
    netconf/test/test-suites/common/module-load-test-suite.cpp
    netconf/test/test-suites/common/simple-choice-tests.cpp
    netconf/test/test-suites/common/simple-edit-tests-candidate.cpp
    netconf/test/test-suites/common/simple-edit-tests-startup.cpp
    netconf/test/test-suites/common/simple-edit-tests-validate.cpp
    netconf/test/test-suites/common/simple-edit-tests.cpp
    netconf/test/test-suites/common/simple-must-tests.cpp
    netconf/test/test-suites/common/startup-delete-config-tests.cpp
    netconf/test/test-suites/common/state-data-tests-get.cpp
    netconf/test/test-suites/integ/base-64-tests.cpp
    netconf/test/test-suites/system/my-session-tests.cpp
    netconf/test/test-suites/system/shutdown-tests.cpp
    netconf/test/test-suites/system/simple-edit-tests-confirmed-commit.cpp)

add_executable(OpenYuma_master ${SOURCE_FILES})